Fix for cancel button not visible on edit with no flows

--- a/scss/content.scss
+++ b/scss/content.scss
@@ -4,6 +4,12 @@
 }
 
 [data-mh-no-data-flows] {
+    &.ct--editing {
+        .ct-ignition {
+            right: 128px;
+        }
+    }
+
     .ct-ignition {
         right: 64px;
     }
